<resources>
    <string name="app_name">ae Pronunciation</string>
    <string name="locale">en</string>
    <string name="main_menu_keyboard">Keyboard</string>
    <string name="main_menu_history">History</string>
    <string name="main_menu_about">About</string>
    <string name="main_tab_learn">Learn</string>
    <string name="main_tab_practice">Practice</string>
    <string name="main_tab_test">Test</string>
    <string name="learn_single_show_doubles">Double sounds</string>
    <string name="title_activity_learn_double">Double sounds with /%1$s/</string>
    <string name="tell_me_button" translatable="false">\?</string>
    <string name="practice_mode_single">Single</string>
    <string name="practice_mode_double">Double</string>
    <string name="select_sounds_title">Choose sounds to practice</string>
    <string name="select_sounds_radio_single">Single</string>
    <string name="select_sounds_radio_double">Double</string>
    <string name="select_sounds_cb_vowels">Vowels</string>
    <string name="select_sounds_cb_consonants">Consonants</string>
    <string name="select_sounds_positive_button">OK</string>
    <string name="test_setup_name">Name</string>
    <string name="test_default_name">Me</string>
    <string name="test_setup_number_of_questions">Questions:</string>
    <string name="test_setup_type">Type:</string>
    <string name="test_setup_single">Single</string>
    <string name="test_setup_double">Double</string>
    <string name="test_setup_begin_button">Begin</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_test_results">Test Results</string>
    <string name="test_results_percent" translatable="false">%1$d%%</string>
    <string name="test_results_right">Right: %1$d</string>
    <string name="test_results_wrong">Wrong: %1$d</string>
    <string name="test_results_time">Time length: %1$s</string>
    <string name="test_results_practice_difficult_button">Practice the difficult sounds</string>
    <string name="title_activity_history">History</string>
    <string name="history_time_title">Total time spent:</string>
    <string name="history_test_title">Tests:</string>
    <string name="history_details">Details</string>
    <string name="title_activity_history_time">Total time spent</string>
    <string name="history_time_details_learning">Time Learning</string>
    <string name="history_time_details_practicing">Time Practicing</string>
    <string name="history_time_details_testing">Time Testing</string>
    <string name="history_time_details_total">Total Time</string>
    <string name="history_time_details_type_single">Singles</string>
    <string name="history_time_details_type_double">Doubles</string>
    <string name="title_activity_history_tests">Past tests</string>
    <string name="history_test_details_type_single">Single (%1$d)</string>
    <string name="history_test_details_type_double">Double (%1$d)</string>
    <string name="history_test_details_specific_test_number_of_questions">Questions: %1$d</string>
    <string name="title_activity_history_test_details">Test details</string>
    <string name="history_tests_item_score" translatable="false">%1$d%%</string>
    <string name="history_tests_type_single">Single: %1$d%%</string>
    <string name="history_tests_type_double">Double: %1$d%%</string>
    <string name="title_activity_about">About</string>
    <string name="about_app_name">American English Pronunciation</string>
    <string name="about_app_version">Version %1$s</string>
    <string name="about_content">If you have any questions, comments, or suggestions, then please leave a message.</string>
    <string name="about_contact">Contact</string>
    <string name="about_contact_url" translatable="false">http://www.aepronunciation.com/contact/</string>
    <string name="personal_evaluation_content" translatable="false">A limitation of this app is that it is unable to give you feedback on your actual spoken pronunciation. If you would like the app author to evaluate a recording of your pronunciation, you can use this third-party website.</string>
    <string name="personal_evaluation_contact" translatable="false">Request evaluation</string>
    <string name="personal_evaluation_contact_url" translatable="false">https://www.fiverr.com/suragch/analyze-your-pronunciation-of-american-english</string>
    <string name="title_activity_keyboard_input">Write IPA</string>
    <string name="keyboard_input_toast_text_copied">IPA text copied</string>
    <string name="keyboard_menu_copy">Copy</string>
    <string name="keyboard_menu_clear">Clear</string>
    <string name="keyboard_menu_share">Share</string>
    <string name="keyboard_menu_share_chooser_title">Share text to…</string>
    <string name="keyboard_menu_alert_message">Are you sure you want to delete all the text?</string>
    <string name="keyboard_menu_alert_clear_all_button">Delete</string>
    <string name="error_two_consonants">You wrote %1$s + %2$s (two consonants). You should choose one consonant and one vowel.</string>
    <string name="error_two_vowels">You wrote %1$s + %2$s (two vowels). You should choose one consonant and one vowel.</string>
    <string name="error_initial_ng">You wrote  %1$s + %2$s, but /ŋ/ never begins a syllable in English.</string>
    <string name="error_final_r">You should use the keys for one of the R vowels (ɝ, ɑr, ɛr, ɪr, ɔr) if you want to end a sound with /r/. There should also be another consonant.</string>
    <string name="error_final_wjh">You wrote %1$s + %2$s, but a syllable never ends with the /%2$s/ sound in English.</string>
    <string name="error_dialog_ok_button">OK</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="key_p" translatable="false">p</string>
    <string name="key_t" translatable="false">t</string>
    <string name="key_k" translatable="false">k</string>
    <string name="key_ch" translatable="false">ʧ</string>
    <string name="key_f" translatable="false">f</string>
    <string name="key_th_voiceless" translatable="false">θ</string>
    <string name="key_s" translatable="false">s</string>
    <string name="key_sh" translatable="false">ʃ</string>
    <string name="key_b" translatable="false">b</string>
    <string name="key_d" translatable="false">d</string>
    <string name="key_g" translatable="false">g</string>
    <string name="key_dzh" translatable="false">ʤ</string>
    <string name="key_v" translatable="false">v</string>
    <string name="key_th_voiced" translatable="false">ð</string>
    <string name="key_z" translatable="false">z</string>
    <string name="key_zh" translatable="false">ʒ</string>
    <string name="key_m" translatable="false">m</string>
    <string name="key_n" translatable="false">n</string>
    <string name="key_ng" translatable="false">ŋ</string>
    <string name="key_l" translatable="false">l</string>
    <string name="key_w" translatable="false">w</string>
    <string name="key_j" translatable="false">j</string>
    <string name="key_h" translatable="false">h</string>
    <string name="key_r" translatable="false">r</string>
    <string name="key_i" translatable="false">i</string>
    <string name="key_i_short" translatable="false">ɪ</string>
    <string name="key_e_short" translatable="false">ɛ</string>
    <string name="key_ae" translatable="false">æ</string>
    <string name="key_a" translatable="false">ɑ</string>
    <string name="key_c_backwards" translatable="false">ɔ</string>
    <string name="key_u_short" translatable="false">ʊ</string>
    <string name="key_u" translatable="false">u</string>
    <string name="key_v_upsidedown" translatable="false">ʌ</string>
    <string name="key_shwua" translatable="false">ə</string>
    <string name="key_ei" translatable="false">eɪ</string>
    <string name="key_ai" translatable="false">aɪ</string>
    <string name="key_au" translatable="false">aʊ</string>
    <string name="key_oi" translatable="false">ɔɪ</string>
    <string name="key_ou" translatable="false">oʊ</string>
    <string name="key_flap_t" translatable="false">ɾ</string>
    <string name="key_er_stressed" translatable="false">ɝ</string>
    <string name="key_er_unstressed" translatable="false">ɚ</string>
    <string name="key_ar" translatable="false">ɑr</string>
    <string name="key_er" translatable="false">ɛr</string>
    <string name="key_ir" translatable="false">ɪr</string>
    <string name="key_or" translatable="false">ɔr</string>
    <string name="key_glottal_stop" translatable="false">ʔ</string>
    <string name="key_left_bracket" translatable="false">[</string>
    <string name="key_right_bracket" translatable="false">]</string>
    <string name="key_slash" translatable="false">/</string>
    <string name="key_undertie" translatable="false">‿</string>
    <string name="key_space" translatable="false">\u0020</string>
    <string name="key_primary_stress" translatable="false">ˈ</string>
    <string name="key_secondary_stress" translatable="false">ˌ</string>
    <string name="key_long_vowel" translatable="false">ː</string>
    <string name="key_return" translatable="false">\n</string>
    <string name="key_alt_e_short" translatable="false">e</string>
    <string name="key_alt_c_backwards" translatable="false">ɒ</string>
    <string name="key_alt_ou" translatable="false">əʊ</string>
    <string name="key_alt_er_stressed" translatable="false">ɜː</string>
    <string name="key_alt_er_unstressed" translatable="false">ə</string>
    <string name="key_alt_ar" translatable="false">ɑː</string>
    <string name="key_alt_er" translatable="false">eə</string>
    <string name="key_alt_ir" translatable="false">ɪə</string>
    <string name="key_alt_or" translatable="false">ɔː</string>
    <string name="key_alt_l" translatable="false">ɫ</string>
    <string name="key_alt_w" translatable="false">ʍ</string>
    <string name="key_alt_h" translatable="false">ʰ</string>
    <string name="key_alt_r" translatable="false">ɹ</string>
    <string name="p_description">/p/ is a voiceless consonant. /p/ is aspirated ([pʰ]) at the beginning of words but it is unaspirated ([p]) after /s/ and at the end of a word. Vowels have a shorter sound when they come before /p/.</string>
    <string name="p_example1" translatable="false">pass\n/pæs/</string>
    <string name="p_example2" translatable="false">speak\n/spik/</string>
    <string name="p_example3" translatable="false">stop\n/stɑp/</string>
    <string name="t_description">/t/ is a voiceless consonant. /t/ is aspirated ([tʰ]) at the beginning of words but it is unaspirated ([t]) after /s/ and at the end of a word. Be careful not to read the third example [ɪtə] or [ɪtʰ] or [ɪts]. Also note that the letter \"t\" often changes its pronunciation in American English. See /ʔ/ and /ɾ/. Vowels have a shorter sound when they come before /t/.</string>
    <string name="t_example1" translatable="false">toad\n/toʊd/</string>
    <string name="t_example2" translatable="false">sting\n/stɪŋ/</string>
    <string name="t_example3" translatable="false">it\n/ɪt/</string>
    <string name="k_description">/k/ is a voiceless consonant. /k/ is aspirated ([kʰ]) at the beginning of words but it is unaspirated ([k]) after /s/ and at the end of a word. Vowels have a shorter sound when they come before /k/.</string>
    <string name="k_example1" translatable="false">cool\n/kul/</string>
    <string name="k_example2" translatable="false">skill\n/skɪl/</string>
    <string name="k_example3" translatable="false">week\n/wik/</string>
    <string name="ch_description">/ʧ/ is a voiceless consonant. Your tongue starts at the top of your mouth behind your teeth. Vowels have a shorter sound when they come before /ʧ/.</string>
    <string name="ch_example1" translatable="false">chairs\n/ʧɛrz/</string>
    <string name="ch_example2" translatable="false">each of\n/\'iʧəv/</string>
    <string name="ch_example3" translatable="false">church\n/ʧɝʧ/</string>
</resources>