<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <com.aepronunciation.ipa.IpaTextView
        android:id="@+id/tvAboutAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_app_name"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:textSize="20sp" />

    <com.aepronunciation.ipa.IpaTextView
        android:id="@+id/tvAboutVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="Version x.x"
        android:textSize="15sp" />

    <com.aepronunciation.ipa.IpaTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/about_content"
        android:layout_margin="10dp" />

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/button"
        android:clickable="true"
        android:onClick="contactClick"
        android:padding="10dp" >

        <com.aepronunciation.ipa.IpaTextView
            style="@style/AppTheme.ButtonTextStyle"
            android:text="@string/about_contact"
            android:textSize="20sp" />
    </RelativeLayout>

</LinearLayout>